Prevent scrolling on tablet UIs

--- a/homedisplay/display/static/css/custom_door.css
+++ b/homedisplay/display/static/css/custom_door.css
@@ -1,7 +1,8 @@
 body {
   background-color: black;
   color: #bbb;
-
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .light-controls {
